<resources>
    <string name="app_name">Judaic App</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JudaicApp</string>
    <string name="nav_header_subtitle">JudaicApp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">דף הבית</string>
    <string name="menu_siddur">סידור</string>
    <string name="menu_limud_yomi">לימוד יומי</string>
    <string name="menu_others">פונקציות נוספות</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="siddur">סידור</string>
    <string name="ashkenaz_siddur">אשכנז</string>
    <string name="sefard_siddur">ספרד</string>
    <string name="edot_hamizrach_siddur">עדות המזרח</string>
    <string name="limud_yomi">לימוד יומי</string>
    <string name="daf_yomi">דף יומי</string>
    <string name="mishna_yomi">משנה יומית</string>
    <string name="shtayim_mikrah">שתיים מקרא</string>
    <string name="tehillim">תהילים יומי</string>
    <string name="recorded_shiurim">שיעורים מוקלטים</string>
    <string name="other_functions">פונקציות נוספות</string>
    <string name="chat_with_rav">שאלה לרב</string>
    <string name="jerusalem_compass">כיוון תפילה</string>
    <string name="jewish_calender">לוח שנה עברי</string>
    <string name="tefillin_guide">מדריך להנחת תפילין</string>
    <string name="daily_prayer_times">זמני היום</string>
    <string name="daily_halacha_header">הלכה יומית</string>
    <string name="title_activity_ashkenaz_siddur">AshkenazSiddur</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shiurim">
        שיעור של רב X
        \n
        בנושא של X
    </string>


    <!-- compass strings -->
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title" translatable="false">GPS settings</string>
    <string name="gps_settings_text" translatable="false">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok" translatable="false">Settings</string>
    <string name="settings_button_cancel" translatable="false">Cancel</string>
    <string name="msg_permission_not_granted_yet" translatable="false">Location access not available yet</string>
    <string name="msg_permission_granted" translatable="false">Location Access Granted</string>
    <string name="toast_permission_required" translatable="false">This app requires Access Location</string>
    <string name="your_location" translatable="false">Your Location: </string>
    <string name="unable_to_get_your_location" translatable="false">Unable to get your location</string>
    <string name="location_not_ready" translatable="false">Location not ready.</string>
    <string name="pls_enable_location" translatable="false">Please turn on Location</string>
    <string name="degree" translatable="false">°</string>
    <string name="using_last_location" translatable="false">using last location.</string>
    <string name="dialog_message_sensor_not_exist" translatable="false">Your device doesn\'t have the required sensors</string>
    <string name="dialog_title" translatable="false">Alert</string>
    <string name="footer_image">Footer Image</string>
    <string name="title_location_permission">allow us to steal ur location</string>
    <string name="text_location_permission" />
    <string name="ok" />
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="tefilat">תפילת הדרך</string>
    <string name="stuffs">\</string>
    <string name="berashis">בראשית</string>
    <string name="shemos">שמות</string>
    <string name="vayikrah">ויקרא</string>
    <string name="bamidbar">במדבר</string>
    <string name="devarim">דברים</string>
</resources>