<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/siddur"
            android:icon="@drawable/ic_siddur"
            android:title="@string/menu_siddur" />
        <item
            android:id="@+id/limud_yomi"
            android:icon="@drawable/ic_halacha_yomit"
            android:title="@string/menu_limud_yomi" />
        <item
            android:id="@+id/others2"

            android:icon="@drawable/ic_more_options"
            android:title="@string/menu_others" />
    </group>
</menu>