<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Others">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_rav_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/one"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/chat_with_rav"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/menu_jlem_compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/two"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/jerusalem_compass"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/menu_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/three"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/jewish_calender"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/menu_tefillin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/four"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/tefillin_guide"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/menu_zmanim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/five"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/daily_prayer_times"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>