<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Siddur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Ashkenaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/app_blue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/ashkenaz_siddur"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/Sefard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sefard_siddur"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/Edot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/app_blue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/edot_hamizrach_siddur"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/TefilatHaderech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/tefilat"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>